# vollseg-napari

./: .buildinfo  .coverage  .gitignore  EMBRYOS.html  END.html  LICENCE.txt  MAMMARYGLAND.html  MAMMARYGLAND.md  MANIFEST.in  MANIFEST.in.txt  MICROTUBULES.html  MICROTUBULES.md  POINTCLOUDS.html  POINTCLOUDS.md  Pipfile  README.html  README.md  SPHEROIDS.html  SPHEROIDS.md  TRAINING.md  XENOPUS.html  XENOPUS.md  __init__.py  _config.yml  _dock_widget.py  _toc.yml  _version.py  coverage.xml  genindex.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: checks.yml.yml  deploy.yml  napari-hub-preview.yml  plugin_preview.yml  test.yml  test_pypi.yml
.napari/: DESCRIPTION.html  config.yml
.pytest_cache/: README.html
_build/.doctrees/: EMBRYOS.doctree  END.doctree  MAMMARYGLAND.doctree  MICROTUBULES.doctree  POINTCLOUDS.doctree  README.doctree  SPHEROIDS.doctree  TRAINING.doctree  XENOPUS.doctree  environment.pickle
_build/html/: MAMMARYGLAND.html  MICROTUBULES.html  POINTCLOUDS.html  README.html  SPHEROIDS.html  TRAINING.html  XENOPUS.html  genindex.html  objects.inv  search.html  searchindex.js
_downloads/9ecc78015d8022420774c255edd418ae/: cellpose_stardist_membrane.py
_sources/: EMBRYOS.md  END.rst  MAMMARYGLAND.md  MICROTUBULES.md  POINTCLOUDS.md  README.md  README.rst  SPHEROIDS.md  SPHEROIDS.rst  TRAINING.md
launch/: SegmentationMetrics.ipynb  SegmentationMetrics.py  example_napari.py
scripts/: 01_timelapse_joint_membrane_nuclei_segmentation.py  apply_autoencoder.py  create_training_patches.py  mammary_gland_us.py  minus_02_train_roi.py  segmentation_corrections.py  simple_nuclei_segmentation.py  unet_star_noise_segmentation.py
src/vollseg_napari/: _dock_widget.py  _sample_data.py  _version.py
vollseg_napari/: .coverage  Test.ipynb  __init__.py  _dock_widget.py  _sample_data.py  _test_dock_widget.py  _version.py  napari.yaml  tox.ini  version.py
vollseg_napari.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+41 files in other folders)
