[metadata]
name = vollseg-napari
version = attr: vollseg_napari._version.__version__
description = Irregular cell shape segmentation using VollSeg in Napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kapoorlabs-CAPED/vollseg-napari
author = Varun Kapoor, Mari Tolonen, Jakub Sedzinski
author_email = randomaccessiblekapoor@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/Kapoorlabs-CAPED/vollseg-napari/issues
    Documentation = https://github.com/Kapoorlabs-CAPED/vollseg-napari#README.md
    Source Code = https://github.com/Kapoorlabs-CAPED/vollseg-napari
    User Support = https://github.com/Kapoorlabs-CAPED/vollseg-napari/issues

[options]
packages = find:
install_requires =
    vollseg
    napari
    magicgui
    pyqt6

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    vollseg-napari = vollseg_napari:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
